STB-2158 bypass spring auth for local development and enbaled MVC test