@@ -1,14 +1,16 @@
 package uk.gov.justice.record.link.controller;
 
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import uk.gov.justice.record.link.entity.CcmsUser;
@@ -20,6 +22,7 @@ import uk.gov.justice.record.link.service.LinkedRequestService;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -29,8 +32,10 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
 
-@Disabled
+@ActiveProfiles("local")
+@AutoConfigureMockMvc(addFilters = false)
 @WebMvcTest(ManageLinkingAccountRequestsController.class)
+@ContextConfiguration(classes = ManageLinkingAccountRequestsController.class)
 class ManageLinkingAccountRequestsControllerTest {
 
     @Autowired
@@ -48,7 +53,7 @@ class ManageLinkingAccountRequestsControllerTest {
             List<LinkedRequest> mockRequests = createMockLinkedRequests();
             Page<LinkedRequest> mockPage = new PageImpl<>(mockRequests, PageRequest.of(0, 10), 15);
 
-            when(linkedRequestService.getAllLinkingRequests(1, 10)).thenReturn(mockPage);
+            when(linkedRequestService.getLinkingRequestByOldLogin("", 1, 10)).thenReturn(mockPage);
 
             mockMvc.perform(get("/manage-linking-account")
                             .param("page", "1")
@@ -57,7 +62,7 @@ class ManageLinkingAccountRequestsControllerTest {
                     .andExpect(view().name("manage-link-account-requests"))
                     .andExpect(model().attributeExists("pagedRequest"))
                     .andExpect(result -> {
-                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) result.getModelAndView().getModel().get("pagedRequest");
+                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) Objects.requireNonNull(result.getModelAndView()).getModel().get("pagedRequest");
                         assertThat(pagedRequest.currentPage()).isEqualTo(1);
                         assertThat(pagedRequest.totalPages()).isEqualTo(2);
                         assertThat(pagedRequest.totalItems()).isEqualTo(15L);
@@ -72,7 +77,7 @@ class ManageLinkingAccountRequestsControllerTest {
             List<LinkedRequest> mockRequests = createMockLinkedRequests();
             Page<LinkedRequest> mockPage = new PageImpl<>(mockRequests, PageRequest.of(1, 5), 25);
 
-            when(linkedRequestService.getAllLinkingRequests(2, 5)).thenReturn(mockPage);
+            when(linkedRequestService.getLinkingRequestByOldLogin("", 2, 5)).thenReturn(mockPage);
 
             mockMvc.perform(get("/manage-linking-account")
                             .param("page", "2")
@@ -81,7 +86,7 @@ class ManageLinkingAccountRequestsControllerTest {
                     .andExpect(view().name("manage-link-account-requests"))
                     .andExpect(model().attributeExists("pagedRequest"))
                     .andExpect(result -> {
-                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) result.getModelAndView().getModel().get("pagedRequest");
+                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) Objects.requireNonNull(result.getModelAndView()).getModel().get("pagedRequest");
                         assertThat(pagedRequest.currentPage()).isEqualTo(2);
                         assertThat(pagedRequest.totalPages()).isEqualTo(5);
                         assertThat(pagedRequest.totalItems()).isEqualTo(25L);
@@ -93,9 +98,9 @@ class ManageLinkingAccountRequestsControllerTest {
 
         @Test
         void noLinkedRequestsExist() throws Exception {
-            Page<LinkedRequest> emptyPage = new PageImpl<>(Arrays.asList(), PageRequest.of(0, 10), 0);
+            Page<LinkedRequest> emptyPage = new PageImpl<>(List.of(), PageRequest.of(0, 10), 0);
 
-            when(linkedRequestService.getAllLinkingRequests(1, 10)).thenReturn(emptyPage);
+            when(linkedRequestService.getLinkingRequestByOldLogin("", 1, 10)).thenReturn(emptyPage);
 
             mockMvc.perform(get("/manage-linking-account")
                             .param("page", "1")
@@ -104,7 +109,7 @@ class ManageLinkingAccountRequestsControllerTest {
                     .andExpect(view().name("manage-link-account-requests"))
                     .andExpect(model().attributeExists("pagedRequest"))
                     .andExpect(result -> {
-                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) result.getModelAndView().getModel().get("pagedRequest");
+                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) Objects.requireNonNull(result.getModelAndView()).getModel().get("pagedRequest");
                         assertThat(pagedRequest.currentPage()).isEqualTo(1);
                         assertThat(pagedRequest.totalPages()).isEqualTo(0);
                         assertThat(pagedRequest.totalItems()).isEqualTo(0L);
@@ -119,7 +124,7 @@ class ManageLinkingAccountRequestsControllerTest {
             List<LinkedRequest> mockRequests = createMockLinkedRequests();
             Page<LinkedRequest> mockPage = new PageImpl<>(mockRequests, PageRequest.of(2, 10), 23);
 
-            when(linkedRequestService.getAllLinkingRequests(3, 10)).thenReturn(mockPage);
+            when(linkedRequestService.getLinkingRequestByOldLogin("", 3, 10)).thenReturn(mockPage);
 
             mockMvc.perform(get("/manage-linking-account")
                             .param("page", "3")
@@ -128,7 +133,7 @@ class ManageLinkingAccountRequestsControllerTest {
                     .andExpect(view().name("manage-link-account-requests"))
                     .andExpect(model().attributeExists("pagedRequest"))
                     .andExpect(result -> {
-                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) result.getModelAndView().getModel().get("pagedRequest");
+                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) Objects.requireNonNull(result.getModelAndView()).getModel().get("pagedRequest");
                         assertThat(pagedRequest.currentPage()).isEqualTo(3);
                         assertThat(pagedRequest.totalPages()).isEqualTo(3);
                         assertThat(pagedRequest.totalItems()).isEqualTo(23L);
@@ -142,7 +147,7 @@ class ManageLinkingAccountRequestsControllerTest {
             List<LinkedRequest> mockRequests = createMockLinkedRequests();
             Page<LinkedRequest> mockPage = new PageImpl<>(mockRequests, PageRequest.of(0, 10), 15);
 
-            when(linkedRequestService.getAllLinkingRequests(1, 10)).thenReturn(mockPage);
+            when(linkedRequestService.getLinkingRequestByOldLogin("", 1, 10)).thenReturn(mockPage);
 
             mockMvc.perform(get("/manage-linking-account")
                             .param("page", "1")
@@ -151,7 +156,7 @@ class ManageLinkingAccountRequestsControllerTest {
                     .andExpect(view().name("manage-link-account-requests"))
                     .andExpect(model().attributeExists("pagedRequest"))
                     .andExpect(result -> {
-                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) result.getModelAndView().getModel().get("pagedRequest");
+                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) Objects.requireNonNull(result.getModelAndView()).getModel().get("pagedRequest");
                         assertThat(pagedRequest.linkedRequests()).isNotNull();
                         assertThat(pagedRequest.currentPage()).isNotNull();
                         assertThat(pagedRequest.totalPages()).isNotNull();
@@ -160,6 +165,35 @@ class ManageLinkingAccountRequestsControllerTest {
                         assertThat(pagedRequest.hasPrevious()).isNotNull();
                         assertThat(pagedRequest.hasNext()).isNotNull();
                     });
+
+        }
+
+        @DisplayName("Should return manage link account page when called with old login id")
+        @Test
+        void calledWithLoginId() throws Exception {
+            List<LinkedRequest> mockRequests = createMockLinkedRequests();
+            Page<LinkedRequest> mockPage = new PageImpl<>(mockRequests, PageRequest.of(0, 10), 15);
+
+            when(linkedRequestService.getLinkingRequestByOldLogin("oldLogiInd", 1, 10)).thenReturn(mockPage);
+
+            mockMvc.perform(get("/manage-linking-account")
+                            .param("page", "1")
+                            .param("size", "10")
+                            .param("oldLoginId", "oldLogiInd"))
+                    .andExpect(status().isOk())
+                    .andExpect(view().name("manage-link-account-requests"))
+                    .andExpect(model().attributeExists("pagedRequest"))
+                    .andExpect(result -> {
+                        PagedUserRequest<?> pagedRequest = (PagedUserRequest<?>) Objects.requireNonNull(result.getModelAndView()).getModel().get("pagedRequest");
+                        assertThat(pagedRequest.linkedRequests()).isNotNull();
+                        assertThat(pagedRequest.currentPage()).isNotNull();
+                        assertThat(pagedRequest.totalPages()).isNotNull();
+                        assertThat(pagedRequest.totalItems()).isNotNull();
+                        assertThat(pagedRequest.pageSize()).isNotNull();
+                        assertThat(pagedRequest.hasPrevious()).isNotNull();
+                        assertThat(pagedRequest.hasNext()).isNotNull();
+                    });
+
         }
 
         private List<LinkedRequest> createMockLinkedRequests() {
